2006-11-27  Matthias Wimmer  <m@tthias.eu>

    * jsm/modules/mod_xml.c: removed public storage, updated private storage
    * jsm/jsm.c: same

2006-11-26  Matthias Wimmer  <m@tthias.eu>

    * jabberd/lib/jabberdlib.h: fixing typo in namespace

2006-11-23  Matthias Wimmer  <m@tthias.eu>
    * jabberd/acl.c: support to add whole domains to a ACL
    * jsm/modules/mod_disco.c: make discovery results ACL dependent
    * jsm/modules/mod_browse.c: same

2006-11-22  Matthias Wimmer  <m@tthias.eu>

    * jsm/modules/mod_ping.c: support for XEP-0199
    * jsm/modules/mod_xml.c: do not reply to XEP-0199 get requests

2006-11-21  Matthias Wimmer  <m@tthias.eu>

    * jsm/authreg.c: making most strings sent to a user translateable
    * jsm/sessions.c: same
    * jsm/modules/mod_xml.c: same
    * jsm/modules/mod_last.c: same
    * jsm/modules/mod_presence.c: same
    * jsm/modules/mod_roster.c: same
    * jsm/modules/mod_offline.c: same
    * jsm/modules/mod_register.c: same
    * jsm/modules/mod_admin.c: same
    * jsm/jsm.c: same
    * jsm/deliver.c: same
    * jsm/serialization.c: same
    * jabberd/base/base_unsubscribe.c: same
    * jabberd/base/base_connect.c: same
    * jabberd/base/base_accept.c: same
    * jabberd/jabberd.h: same
    * jabberd/lib/jabberdlib.h: same
    * jabberd/lib/jutil.c: same
    * jabberd/deliver.c: same
    * dialback/dialback_in.c: same
    * dialback/dialback_out.c: same
    * dialback/dialback.c: same
    * pthsock/client.c: same
    * dnsrv/dnsrv.c: same

2006-11-20  Matthias Wimmer  <m@tthias.eu>

    * xdb_sql/xdb_sql.cc: fixing big bug introduced with the latest change
    	that my cause crashes of jabberd14
    * dialback/dialback.c: fixing the tls='force' and auth options for s2s
    * dialback/dialback_in.c: fixing bug #74
    * jabberd/lib/messages.c: functions to translate messages
    * jabberd/lib/jutil.c: using the message translation function
    * jabberd/config.c: parsing configuration options to set-up locales
