@@ -1,3 +1,8 @@
+2006-11-29  Matthias Wimmer  <m@tthias.eu>
+
+    * jsm/modules/mod_disco.c: service discovery for user JIDs
+    * jsm/modules/mod_ping.c: correct ping support after jsm restart
+
 2006-11-27  Matthias Wimmer  <m@tthias.eu>
 
     * jsm/modules/mod_xml.c: removed public storage, updated private storage
